solved a webpack issue not showing images

--- a/client/modules/App/App.css
+++ b/client/modules/App/App.css
@@ -1,7 +1,7 @@
 .container {
   background-color: tomato;
-  max-width: 980px;
+  /* max-width: 980px;*/
   width: 100%;
-  padding: 15px;
+  /* padding: 15px; */
   margin: 0 auto;
 }
